WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275912
[WebXR] Fix MESSAGE_CHECK failure in PlatformXRSystem::RequestFrame()
https://bugs.webkit.org/show_bug.cgi?id=275912
Summary
[WebXR] Fix MESSAGE_CHECK failure in PlatformXRSystem::RequestFrame()
Ada Chan
Reported
2024-06-26 11:53:23 PDT
[WebXR] Fix MESSAGE_CHECK failure in PlatformXRSystem::RequestFrame()
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2024-06-26 11:53:27 PDT
<
rdar://problem/130300869
>
Ada Chan
Comment 2
2024-06-26 12:16:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30199
EWS
Comment 3
2024-06-26 14:31:52 PDT
Committed
280392@main
(a3fcf4fdfbc1): <
https://commits.webkit.org/280392@main
> Reviewed commits have been landed. Closing PR #30199 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug